--- a/FrontEnd/Sign in.html
+++ b/FrontEnd/Sign in.html
@@ -11,15 +11,14 @@
         <img src="netflix_logo-removebg-preview.png">
         <div class="form">
         <h1>Sign In</h1>
-        <form action="#" class="one">
-            <input  type="text" id="Email_id" placeholder="Email or phone number">
-            
-        <button onclick="email()" type="submit">Sign In</button>
+        <form action="#" class="one" id="signin">
+            <input  type="email" name="email" placeholder="Email or phone number" autocomplete="email">
+            <input name="password" type="password" placeholder="Password" autocomplete="current-password">
+            <button type="submit">Sign In</button>
         </form>
-        <form class="two">
-            <input type="text" id="Password" placeholder="Password">
+        <!-- <form class="two">
             
-        </form>
+        </form> -->
         <h2>New to Netflix? </h2>
         <a href="index.html">Sign up now</a>
         </div>
