connected signin and signup page to backend

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,7 +14,7 @@
         <h1>Laughter. Tears. Thrills. Find it all on Netflix.</h1>
         <h2>Endless entertainment starts at just ₹149. Cancel anytime.</h2>
         <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
-        <form action="#" method="get">
+        <form id="email_form" action="./sign up.html">
         
         <input type="text" id="Email_id" placeholder="Email address">
         <button type="submit">Get Started ></button>
